--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
+    "date-fns": "^2.14.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
